[package]
name = "light-rust"
version = "0.1.0"
authors = ["Simonas Sankauskas <simonas.sank@gmail.com>"]
edition = "2021"

[dependencies]
imxrt-hal = "0.5.1"
imxrt-ral = "0.5.0"
fugit = "0.3.6"
cortex-m = "0.7"
embedded-hal = "0.2"
# Remove me if you don't want logging.
log = "0.4"
teensy4-panic = "0.2"
smart-leds = "0.3.0"
ws2812-timer-delay = "0.3.0"

[dependencies.teensy4-bsp]
version = "0.4"
features = [
    # Use the BSP's runtime. This lets you write your
    # `main()` function.
    "rt",
    # Remove me if you don't want logging.
    "usb-logging",
]

# Don't optimize build dependencies, like proc macros.
# Helps with build times.
[profile.release.build-override]
opt-level = 0
